// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/InlineHelp Bottom Center 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-72"
          aria-expanded={false}
          aria-haspopup={true}
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="fd-inline-help"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/InlineHelp Bottom Left 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-71"
          aria-expanded={false}
          aria-haspopup={true}
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="fd-inline-help"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/InlineHelp Bottom Right 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-70"
          aria-expanded={false}
          aria-haspopup={true}
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="fd-inline-help"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/InlineHelp Left 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-74"
          aria-expanded={false}
          aria-haspopup={true}
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="fd-inline-help"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/InlineHelp Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-68"
          aria-expanded={false}
          aria-haspopup={true}
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="fd-inline-help"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/InlineHelp Right 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <span
          aria-controls="fd-73"
          aria-expanded={false}
          aria-haspopup={true}
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="fd-inline-help"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/InlineHelp With Label 1`] = `
<div
  dir="ltr"
>
  <label
    className="fd-form-label fd-form-label--inline-help"
  >
    Label Text
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <span
            aria-controls="fd-69"
            aria-expanded={false}
            aria-haspopup={true}
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              className="fd-inline-help"
            />
          </span>
        </div>
      </div>
    </div>
  </label>
</div>
`;
